src/jabcode/include/jabcode.h

typedef unsigned char 		jab_byte;
typedef char 				jab_char;
typedef int 				jab_int32;
typedef float				jab_float;
/**
 * @brief 2-dimensional integer vector
*/
typedef struct {
	jab_int32	x;
	jab_int32	y;
}jab_vector2d;
/**
 * @brief 2-dimensional float vector
*/
typedef struct {
	jab_float	x;
	jab_float	y;
}jab_point;
/**
 * @brief Data structure
*/
typedef struct {
	jab_int32	length;
	jab_char	data[];
}jab_data;
/**
 * @brief Code bitmap
*/
typedef struct {
   jab_int32	width;
   jab_int32	height;
   jab_int32	bits_per_pixel;
   jab_int32	bits_per_channel;
   jab_int32	channel_count;
   jab_byte		pixel[];
}jab_bitmap;
/**
 * @brief Symbol parameters
*/
typedef struct {
	jab_int32		index;
	jab_vector2d	side_size;
	jab_int32		host;
	jab_int32		slaves[4];
	jab_int32 		wcwr[2];
	jab_int32		Pg;					///< Gross payload length (ecc_encoded_data->length)
	jab_data*		data;
	jab_byte*		data_map;
	jab_data*		metadata;
	jab_byte*		matrix;
}jab_symbol;
/**
 * @brief Encode parameters
*/
typedef struct {
	jab_int32		color_number;
	jab_int32		symbol_number;
	jab_int32		module_size;
	jab_int32		master_symbol_width;
	jab_int32		master_symbol_height;
	jab_byte*		palette;				///< Palette holding used module colors in format RGB
	jab_vector2d*	symbol_versions;
	jab_byte* 		symbol_ecc_levels;
	jab_int32*		symbol_positions;
	jab_symbol*		symbols;				///< Pointer to internal representation of JAB Code symbols
	jab_bitmap*		bitmap;
	jab_int32		mask_type;				///< Mask pattern type used (0-7)
}jab_encode;
/**
 * @brief Decoded metadata
*/
typedef struct {
	jab_boolean default_mode;
	jab_byte Nc;
	jab_byte mask_type;
	jab_byte docked_position;
	jab_vector2d side_version;
	jab_vector2d ecl;
	jab_int32 Pg;				///< Gross payload length (for synthetic decoder)
}jab_metadata;
/**
 * @brief Decoded symbol
*/
typedef struct {
	jab_int32 index;
	jab_int32 host_index;
	jab_int32 host_position;
	jab_vector2d side_size;
	jab_float module_size;
	jab_point pattern_positions[4];
	jab_metadata metadata;
	jab_metadata slave_metadata[4];
	jab_byte* palette;
	jab_data* data;
}jab_decoded_symbol;
extern jab_encode* createEncode(jab_int32 color_number, jab_int32 symbol_number);
extern void destroyEncode(jab_encode* enc);
extern jab_int32 generateJABCode(jab_encode* enc, jab_data* data);
extern jab_data* decodeJABCode(jab_bitmap* bitmap, jab_int32 mode, jab_int32* status);
extern jab_data* decodeJABCodeEx(jab_bitmap* bitmap, jab_int32 mode, jab_int32* status, jab_decoded_symbol* symbols, jab_int32 max_symbol_number);